Add missing locale strings to our two weird locale files.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -401,12 +401,15 @@ Commands.Invite.Success=[[GREEN]]Einladung erfolgreich versendet.
 Commands.Leaderboards=<skill> <seite> [[RED]]- Ranglisten
 Commands.mcgod=[[RED]]- GodMode umschalten
 Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
+Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
 Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[Spieler] <skill> <newvalue> [[RED]] - Ziel modifizieren
+Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
+Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
 Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
 Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Mod-Informationen Lesen.
@@ -443,9 +446,13 @@ Commands.Stats=[[RED]]- Zeigt deine mcMMO Werte
 Commands.ToggleAbility=[[RED]]- F\u00E4higkeiten-Aktivierung per Rechtsklick umschalten
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
 Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.PartyName=party-name
 Commands.Usage.Player=player
+Commands.Usage.Skill=skill
+Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]Du hast derzeit keine Einladungen
 mcMMO.NoPermission=[[DARK_RED]]Unzureichende Rechte.
 mcMMO.NoSkillNote=[[DARK_GRAY]]F\u00FCr dich nicht verf\u00FCgbare Skills werden ausgeblendet.
