--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -358,12 +358,15 @@ Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Toggle GodMode
 Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
+Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
 Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
 Commands.mmoedit=[chwaraewr] <skill> <newvalue>  [[RED]] - Targed addasu
+Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
+Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
 Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
 Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Read brief mod description
@@ -397,9 +400,13 @@ Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
 Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.PartyName=party-name
 Commands.Usage.Player=player
+Commands.Usage.Skill=skill
+Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
