--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -356,6 +356,7 @@ Commands.Inspect=<player> [[RED]]- View detailed player info
 Commands.Invite.Accepted=[[GREEN]] Gwahodd Derbyniwyd. Yr ydych wedi ymuno parti {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
 Commands.mcgod=[[RED]]- Toggle GodMode
 Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
 Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
@@ -364,6 +365,8 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
+Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[chwaraewr] <skill> <newvalue>  [[RED]] - Targed addasu
 Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
@@ -404,6 +407,7 @@ Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
 Commands.Usage.Level=level
 Commands.Usage.Message=message
 Commands.Usage.PartyName=party-name
+Commands.Usage.Page=page
 Commands.Usage.Player=player
 Commands.Usage.Skill=skill
 Commands.Usage.XP=xp
@@ -510,6 +514,7 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You've stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Spout.Donate=[[YELLOW]][mcMMO] Donate!
 Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
@@ -518,6 +523,7 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
 MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
