--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -408,6 +408,7 @@ Commands.Inspect=<player> [[RED]]- View detailed player info
 Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
 Commands.mcgod=[[RED]]- Toggle GodMode
 Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
 Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
@@ -416,6 +417,8 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
+Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
 Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
@@ -458,6 +461,7 @@ Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
 Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
 Commands.Usage.Level=level
 Commands.Usage.Message=message
+Commands.Usage.Page=page
 Commands.Usage.PartyName=party-name
 Commands.Usage.Player=player
 Commands.Usage.Skill=skill
@@ -588,6 +592,7 @@ Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to ste
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
 
 #SPOUT
+Spout.Donate=[[YELLOW]][mcMMO] Donate!
 Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
@@ -598,6 +603,7 @@ Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
 
 #MOTD
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
 MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
