Wrapping up the localizations... though I'm sure there are probably still some that got missed.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -115,6 +115,7 @@ Fishing.Skillup=[[YELLOW]]Angel Skill um {0} gestiegen. Gesamt ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Chance auf Doppel-Drops: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Bauernfr\u00FChst\u00FCck Rang:[[YELLOW]] {0}
 Herbalism.Ability.GTe.Length=[[RED]]Gr\u00FCnes Land Dauer: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Gr\u00FCner Daumen Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**Gr\u00FCner Daumen GESCHEITERT**
 Herbalism.Ability.GTh.Stage=[[RED]]Gr\u00FCner Daumen Stufe: [[YELLOW]] Weizen w\u00E4chst auf Stufe {0}
@@ -204,6 +205,7 @@ Repair.Effect.8=Arkanes Schmieden
 Repair.Effect.9=Repariere magische Gegenst\u00E4nde
 Repair.Effect.16=Verwertung ({0}+ SKILL)
 Repair.Effect.17=Verwerte Werkzeuge & R\u00FCstung
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]Du hast einen Amboss gebaut, hiermit kannst du R\u00FCstung und Werkzeug reparieren.
 Repair.Listener.Anvil2=[[DARK_RED]]Du hast einen Verwertungs-Amboss gebaut,  hiermit kannst du R\u00FCstung und Werkzeug verwerten.
 Repair.Listener=Reparatur: 
@@ -408,6 +410,7 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}'s cooldowns have been refreshed.
 Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
 Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[Spieler] <skill> <newvalue> [[RED]] - Ziel modifizieren
@@ -480,6 +483,10 @@ Party.IsntLocked=[[RED]]Diese Gruppe ist NICHT gesperrt!
 Party.Locked=[[RED]]Gruppe gesperrt, nur der Gruppenleiter kann Einladungen versenden.
 Party.NotInYourParty=[[DARK_RED]]{0} ist nicht in deiner Gruppe
 Party.NotOwner=[[DARK_RED]]Du bist nicht der Gruppenleiter
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player =[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Gruppen-Password ge\u00E4ndert zu: {0}
 Party.Player.Invalid=[[RED]]Dies ist kein g\u00FCltiger Spieler.
 Party.Teleport.Dead=[[RED]]Du kannst dich nicht zu toten Spielern teleportieren
@@ -505,6 +512,7 @@ Commands.XPGain.Woodcutting=B\u00E4ume f\u00E4llen
 Commands.XPGain=[[DARK_GRAY]]XP ZUWACHS: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Deine XP Anzeige ist nun auf {0} festgesetzt!
 Commands.xplock.unlocked=[[GOLD]]Deine XP Anzeige ist nun wieder [[GREEN]]FREIGEGEBEN[[GOLD]]!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]Das mcMMO XP Rate Event ist vor\u00FCber!!
 Commands.xprate.proper.0=[[RED]]Korrekte Eingabe f\u00FCr XP Rate Wechsel: /xprate <integer> <true/false>
 Commands.xprate.proper.1=[[RED]]Korrekte Eingabe f\u00FCr R\u00FCcksetzung auf Standard XP Rate: /xprate reset
