--- a/src/main/resources/locale/locale_en_US.properties
+++ b/src/main/resources/locale/locale_en_US.properties
@@ -124,6 +124,7 @@ Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**GREEN THUMB FAIL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
@@ -213,6 +214,7 @@ Repair.Effect.8=Arcane Forging
 Repair.Effect.9=Repair magic items
 Repair.Effect.16=Salvage ({0}+ SKILL)
 Repair.Effect.17=Salvage Tools & Armor
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]You have placed an anvil, anvils can repair tools and armor.
 Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Repair: 
@@ -417,6 +419,7 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}'s cooldowns have been refreshed.
 Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
 Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
@@ -488,7 +491,11 @@ Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
-Party.NotOwner=[[DARK_RED]]You are not the party owner
+Party.NotOwner=[[DARK_RED]]You are not the party leader.
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player =[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Party password set to {0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]You can't teleport to a dead player.
@@ -514,6 +521,7 @@ Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
 Commands.xprate.proper.0=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
 Commands.xprate.proper.1=[[RED]]Proper usage to restore the XP rate to default is /xprate reset
