--- a/src/main/resources/locale/locale_cy.properties
+++ b/src/main/resources/locale/locale_cy.properties
@@ -96,6 +96,7 @@ Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**GREEN THUMB FAIL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
@@ -179,6 +180,7 @@ Repair.Effect.8=Arcane Forging
 Repair.Effect.9=Atgyweiriwch eitemau sydd hud
 Repair.Effect.16=Salvage ({0}+ SKILL)
 Repair.Effect.17=Salvage Tools & Armor
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]You have placed an anvil, anvils can repair tools and armor.
 Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Atgyweirio:
@@ -365,6 +367,7 @@ Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GR
 Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
 Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}'s cooldowns have been refreshed.
 Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
 Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[chwaraewr] <skill> <newvalue>  [[RED]] - Targed addasu
@@ -432,6 +435,10 @@ Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.NotOwner=[[DARK_RED]]You are not the party owner
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player =[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]] Blaid cyfrinair wedi ei osod i {0}
 Party.Player.Invalid=[[RED]] Nid yw hynny\'n chwaraewr ddilys.
 Party.Teleport.Dead=[[RED]] Ni allwch teleport y chwaraewr yn farw.
@@ -455,6 +462,7 @@ Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]] Cael Profiad: [[WHITE]] {0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
 Commands.xprate.proper.0=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
 Commands.xprate.proper.1=[[RED]]Proper usage to restore the XP rate to default is /xprate reset
